small astc. changes

--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-.body {
-  background-color: ivory
-}
+
 .adder {
   background-color: lime
 }
 .dunner {
   background-color: crimson
 }
-.edit {
-  background-color: snow
+.modal-backdrop
+{
+    opacity:0.7 !important;
+}
+
+.modal-title {
+
+  color:crimson
 }
